--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,10 @@ layout: default
     {% endif %}
   </header>
   <section class="post__body">
-    {{ content }}
+    <h2>Table of contents</h2>
+    <div id="table-of-contents">
+      {% toc %}
+    </div>
+    {% include anchor_headings.html html=content anchorBody="#" beforeHeading=true h_max=2 %}
   </section>
 </article>
