--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,6 @@
 @import 'syntax';
 @import 'tile';
+@import 'toc';
 
 @font-face {
 	font-family: "JetBrains Mono";
@@ -17,7 +18,6 @@ html {
 	background: #fafbfc;
 }
 code {
-	background: #f2f2f2;
 	border-radius: 3px;
 	font-family: "JetBrains Mono", Menlo, Consolas, Monaco, "Courier New", monospace;
 	font-size: .95rem;
@@ -38,16 +38,12 @@ pre {
     border-radius: 6px;
     color: gray-1;
     overflow: auto;
-    padding: 28px 36px;
+    padding: 28px 18px;
     line-height: 1.5;
     -webkit-text-size-adjust: none;
     -moz-text-size-adjust: none;
     -ms-text-size-adjust: none;
     text-size-adjust: none;
-}
-
-code, pre {
-    background: #f2f2f2;
 }
 
 .content {
