--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,7 @@ layout: default
   <section class="post__body">
     <h2>Table of contents</h2>
     <div id="table-of-contents">
+      {% toc %}
     </div>
     {% include anchor_headings.html html=content anchorBody="#" beforeHeading=true h_max=2 %}
   </section>
