--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -235,7 +235,7 @@ main {
 		margin-top: 1em;
 	}
 	a {
-		color: #27272a;
+		color: #66BB6A;
 		transition: color .1s ease;
 		&:active {
 			color: #a0a1a7;
