--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,10 +10,7 @@ layout: default
     {% endif %}
   </header>
   <section class="post__body">
-    <h2>Table of contents</h2>
-    <div id="table-of-contents">
-      {% toc %}
-    </div>
+    {% include toc.html html=content h_max=3 id="markdown-toc" %}
     {% include anchor_headings.html html=content anchorBody="#" beforeHeading=true h_max=2 %}
   </section>
 </article>
