--- a/_sass/_toc.scss
+++ b/_sass/_toc.scss
@@ -1,4 +1,15 @@
-#table-of-contents{
-    background: #f2f2f2;
-    padding: 20px 30px;
+#markdown-toc {
+    display: inline-block;
+    border: 1px solid #aaa;
+    padding: 1rem 1rem 1rem 2rem;
+    list-style: decimal;
+}
+
+#markdown-toc:before {
+    content: "Contents";
+    font-weight: bold;
+}
+
+#markdown-toc ul {
+  margin-top: 10px;
 }
