--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -7,6 +7,13 @@
 	font-display: swap;
 	src: url(/assets/fonts/JetBrainsMono-Regular.v2.imm.woff2) format("woff2"), url(/assets/fonts/JetBrainsMono-Regular.v2.imm.woff) format("woff");
 }
+
+@font-face {
+	font-family: "IBM Plex Sans ExtraLight";
+	font-display: swap;
+	src: url(/assets/fonts/IBMPlexSans-ExtraLight.ttf) format("ttf")
+}
+
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -17,7 +24,9 @@ html {
 	font-size: 16px;
 	background: #fafbfc;
 }
-code {
+
+pre {
+    background: #fdf6e3;
 	border-radius: 3px;
 	font-family: "JetBrains Mono", Menlo, Consolas, Monaco, "Courier New", monospace;
 	font-size: .95rem;
@@ -27,23 +36,29 @@ code {
 	-webkit-font-smoothing: auto;
 }
 
-element.style {
-    background-color: #F2F2F2;
-}
-main img, main p, main pre, main ul {
-    margin-top: 24px;
+.button-external {
+    display: block;
+    color: #66BB6A;
+    font-weight: bold;
+    padding: 0.5rem;
+    margin: 1rem 0;
+    border: 1px solid #eee;
+    border-radius: 3px;
+    text-align: center;
 }
 
-pre {
-    border-radius: 6px;
-    color: gray-1;
-    overflow: auto;
-    padding: 28px 18px;
-    line-height: 1.5;
-    -webkit-text-size-adjust: none;
-    -moz-text-size-adjust: none;
-    -ms-text-size-adjust: none;
-    text-size-adjust: none;
+.highlight .lineno {
+  color: #9a9898;
+}
+
+.highlighter-rouge {
+  position: relative;
+  margin-top: 20px;
+  border-radius: 3px;
+}
+
+main img, main p, main figure, main ul {
+    margin-top: 24px;
 }
 
 .content {
@@ -151,9 +166,10 @@ pre {
 		color: #27272a;
 	}
 }
+
 body {
 	color: #27272a;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+	font-family: "IBM Plex Sans ExtraLight", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
 	line-height: 1.6;
 	padding: 24px 24px 40px;
 }
@@ -181,6 +197,16 @@ h2 {
 		margin: 0;
 	}
 }
+
+.language-plaintext {
+    text-decoration: none;
+    border-bottom: 1px solid #b58900;
+    background-color: #fdf6e3;
+    padding: 0.0625em 0.25em;
+    font-size: 0.875em;
+    border-radius: 0.25rem;
+}
+
 .post__head {
 	text-align: center;
 	padding: 0 32px;
@@ -193,7 +219,7 @@ h2 {
 }
 .post__body {
 	a {
-		text-decoration: underline;
+		text-decoration: none;
 	}
 }
 .mt-32 {
