--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,13 +6,13 @@
       </span>
       •
       <span class="footer-link">
-        <a href="https://github.com/{{ site.github_username }}"><span class="icon icon--github">
+        <a href="https://github.com/{{ site.author.github_username }}"><span class="icon icon--github">
             <svg viewBox="0 0 16 16" width="16px" height="16px"><path fill="#828282" d="M7.999,0.431c-4.285,0-7.76,3.474-7.76,7.761 c0,3.428,2.223,6.337,5.307,7.363c0.388,0.071,0.53-0.168,0.53-0.374c0-0.184-0.007-0.672-0.01-1.32 c-2.159,0.469-2.614-1.04-2.614-1.04c-0.353-0.896-0.862-1.135-0.862-1.135c-0.705-0.481,0.053-0.472,0.053-0.472 c0.779,0.055,1.189,0.8,1.189,0.8c0.692,1.186,1.816,0.843,2.258,0.645c0.071-0.502,0.271-0.843,0.493-1.037 C4.86,11.425,3.049,10.76,3.049,7.786c0-0.847,0.302-1.54,0.799-2.082C3.768,5.507,3.501,4.718,3.924,3.65 c0,0,0.652-0.209,2.134,0.796C6.677,4.273,7.34,4.187,8,4.184c0.659,0.003,1.323,0.089,1.943,0.261 c1.482-1.004,2.132-0.796,2.132-0.796c0.423,1.068,0.157,1.857,0.077,2.054c0.497,0.542,0.798,1.235,0.798,2.082 c0,2.981-1.814,3.637-3.543,3.829c0.279,0.24,0.527,0.713,0.527,1.437c0,1.037-0.01,1.874-0.01,2.129 c0,0.208,0.14,0.449,0.534,0.373c3.081-1.028,5.302-3.935,5.302-7.362C15.76,3.906,12.285,0.431,7.999,0.431z"></path></svg>
       </span><span class="username">github</span></a>
       </span>
       •
       <span class="footer-link">
-        <a href="mailto:{{ site.email }}">
+        <a href="mailto:{{ site.author.email }}">
           <span class="icon icon--email">
             <!--?xml version="1.0" ?--><svg contentscripttype="text/ecmascript" contentstyletype="text/css" enable-background="new 0 0 2048 2048" height="16px" id="Layer_1" preserveAspectRatio="xMidYMid meet" version="1.1" viewBox="0.0 0 1792.0 2048" width="14px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" zoomAndPan="magnify"><path d="M1792,838v794c0,44-15.667,81.667-47,113s-69,47-113,47H160c-44,0-81.667-15.667-113-47s-47-69-47-113V838  c29.333,32.667,63,61.667,101,87c241.333,164,407,279,497,345c38,28,68.833,49.833,92.5,65.5s55.167,31.667,94.5,48  s76,24.5,110,24.5h1h1c34,0,70.667-8.167,110-24.5c39.333-16.333,70.833-32.333,94.5-48s54.5-37.5,92.5-65.5  c113.333-82,279.333-197,498-345C1730,899,1763.333,870,1792,838z M1792,544c0,52.667-16.333,103-49,151s-73.333,89-122,123  c-250.667,174-406.667,282.333-468,325c-6.667,4.667-20.833,14.833-42.5,30.5s-39.667,28.333-54,38s-31.667,20.5-52,32.5  c-20.333,12-39.5,21-57.5,27s-34.667,9-50,9h-1h-1c-15.333,0-32-3-50-9s-37.167-15-57.5-27s-37.667-22.833-52-32.5  s-32.333-22.333-54-38s-35.833-25.833-42.5-30.5c-60.667-42.667-148-103.5-262-182.5S194.667,834,172,818  c-41.333-28-80.333-66.5-117-115.5S0,608,0,566c0-52,13.833-95.333,41.5-130s67.167-52,118.5-52h1472  c43.333,0,80.833,15.667,112.5,47S1792,500,1792,544z"></path></svg>
           </span><span class="email">contact</span></a>
