--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,5 +11,8 @@
  </main>
   {% include footer.html %}
   <script async="" src="/assets/js/main.js"></script>
+  {% if jekyll.environment == 'production' %}
+    {% include analytics.html %}
+  {% endif %}
 </body>
 </html>
