--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@ layout: default
     {% if post.tags.size > 0 %}
       <div class="post-tags post-card__tags">
         {%- for tag in post.tags -%}
-          <a href="/tag/{{ tag }}/" class="post-tags__link"><span>#</span>{{ tag }} </a>
+          <a href="/tag/{{ tag }}" class="post-tags__link"><span>#</span>{{ tag }} </a>
         {%- endfor -%}
       </div>
     {% endif %}
