--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
     {% if page.tags.size > 0 %}
       <div class="post-tags post-card__tags">
         {%- for tag in page.tags -%}
-          <a href="/tag/{{ tag }}/" class="post-tags__link"><span>#</span>{{ tag }} </a>
+          <a href="/tag/{{ tag }}" class="post-tags__link"><span>#</span>{{ tag }} </a>
         {%- endfor -%}
       </div>
     {% endif %}
