--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -15,6 +15,13 @@ layout: default
     <p>
       {{ post.content | strip_html | truncatewords: 30 }}
     </p>
+    {% if post.tags.size > 0 %}
+      <div class="post-tags post-card__tags">
+        {%- for tag in post.tags -%}
+          <a href="/tag/{{ tag }}" class="post-tags__link"><span>#</span>{{ tag }} </a>
+        {%- endfor -%}
+      </div>
+    {% endif %}
     </article>
     <hr>
   {% endfor %}
