Add disqus comment

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,4 +38,7 @@ layout: default
       {% endif %}
     </div>
   </div>
+  {% if site.disqus.shortname %}
+    {% include disqus_comments.html %}
+  {% endif %}
 </article>
