--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -291,6 +291,17 @@ main {
 		display: block;
 		max-width: 100%;
 		height: auto;
+        &.center {
+          margin: auto;
+          margin-top: 22.5px;
+          margin-bottom: 3.75px;
+          max-width: 100%;
+          display: block;
+        }
+        &.border {
+          border: 1px solid #828282;
+          border-radius: 5px;
+        }
 		&:first-child {
 			margin-top: 0;
 		}
