--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,11 +2,11 @@
   <div class="header__inner">
     <div class="header__me">
       <a href="{{site.url | relative_url}}" class="header__me__avatar">
-        <img src="{{ "/assets/images/vo-van-sang-v2.jpeg" | relative_url }}"
+        <img src="{{ "/assets/images/saitama-sangv2.png" | relative_url }}"
         width="64"
         height="64"
         alt="{{ site.title }}"
-        srcset="{{ "/assets/images/vo-van-sang-v2.jpeg" | relative_url }} 2x"
+        srcset="{{ "/assets/images/saitama-sangv2.png" | relative_url }} 2x"
         decoding="async">
       </a>
       <div>
