--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -103,6 +103,7 @@ pre {
 }
 
 .highlighter-rouge {
+  font-family: "JetBrains Mono", Menlo, Consolas, Monaco, "Courier New", monospace;
   position: relative;
   margin-top: 20px;
   border-radius: 3px;
