--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -268,6 +268,9 @@ h2 {
 	h1 {
 		margin-bottom: 16px;
 	}
+    h3 {
+      margin: 20px 0;
+    }
 }
 .post__body {
 	a {
@@ -367,9 +370,8 @@ hr {
 	margin: 32px 0;
 }
 blockquote{
-  margin:50px auto;
+  margin: 20px auto;
   font-style:italic;
-  color: #555555;
   padding:1.2em 10px 1.2em 55px;
   border-left:8px solid #78C0A8 ;
   line-height:1.6;
@@ -399,6 +401,13 @@ blockquote span{
   margin-top:1em;
 }
 
+.img-wrapper{
+  margin-top: 20px;
+  em {
+    display: block;
+    text-align: center;
+  }
+}
 .emoji {
   display: inline-block;
 }
