Remove ads disqus

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -412,6 +412,10 @@ blockquote span{
   display: inline-block;
 }
 
+iframe[src*="ads-iframe"] {
+  display: none
+}
+
 @media (max-width:767px) {
 	.header__inner {
 		flex-direction: column;
