--- a/_includes/series.html
+++ b/_includes/series.html
@@ -19,7 +19,7 @@
       {% capture count %}{{ count | plus: '1' }}{% endcapture %}
       <li>Part {{ count }} -
       {% if page.url == post.url %}
-          This Article
+      <a href="{{post.url}}">{{post.title}}</a> << You are here
       {% else %}
           <a href="{{post.url}}">{{post.title}}</a>
       {% endif %}
