--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,7 +46,5 @@ layout: default
       {% endif %}
     </div>
   </div>
-  {% if site.disqus.shortname and page.comments %}
-    {% include disqus_comments.html %}
-  {% endif %}
+  {% include facebook_comments.html %}
 </article>
