--- a/_includes/facebook_comments.html
+++ b/_includes/facebook_comments.html
@@ -1,5 +1,5 @@
 {% if page.comments != false and jekyll.environment == "production" %}
-  <div class="fb-comments" data-href="{{ page.url | relative_url }}"
+  <div class="fb-comments" data-href="{{ page.url | absolute_url }}"
                            data-width="100%" data-numposts="{{ site.facebook.num_posts }}"
                            data-lazy="{{ site.facebook.lazy}}">
   </div>
